# aion

./: .commit-msg.tmp  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.toml  Cargo.toml  GETTING-STARTED.md  LICENSE-MIT  README.md  dev-config.json  dev-config.toml  doctoroxide.toml  gates.json  package.json  publish-workspace.sh  workspace.json
crates/aion/: Cargo.toml  README.md
crates/aion-awl/: Cargo.toml  README.md
crates/aion-awl-lsp/: Cargo.toml  README.md
crates/aion-awl-lsp/src/: analysis.rs  lib.rs  navigation.rs  server.rs
crates/aion-awl-lsp/tests/: corpus.rs  protocol.rs
crates/aion-awl-package/: Cargo.toml
crates/aion-awl-package/src/: assemble.rs  bundle.rs  bundle_data.rs  lib.rs  prepare.rs
crates/aion-awl-package/tests/: awl_assemble.rs  distribute_parity.rs  runtime_surface_guard.rs  sdk_closure_freshness.rs
crates/aion-awl/src/: ast.rs  checker.rs  compile.rs  emitter.rs  fold.rs  jsontext.rs  lib.rs  parser.rs  printer.rs  schema.rs  semantic.rs  spanned.rs  unlowered.rs
crates/aion-awl/tests/: awl2_defects.rs  b2_review_regressions.rs  b2_review_round2.rs  checker.rs  checker_hardening.rs  checker_regressions.rs  checker_rulings.rs  compile.rs  compile_child_fork.rs  concat_lowering.rs  emitter.rs  feature_any_all_workflow_id.rs  field_trivia_and_duplicates.rs  flow_vocab_b4_compile_proof.rs  flow_vocab_compile_proof.rs  flow_vocab_ergonomics.rs  flow_vocab_refusals.rs  flow_vocab_regions.rs  flow_vocab_roundtrip_property.rs  flow_vocab_shape.rs  flow_vocab_subflows.rs  flow_vocab_visits.rs  implicit_child_identity.rs  lexer.rs  lexer_spans.rs  operators_and_literals.rs  parser_corpus.rs  parser_diagnostics.rs  parser_edge_regressions.rs  parser_printer.rs  printer_roundtrip.rs  runtime_codecs.rs  schema.rs  schema_door.rs  semantic.rs  short_circuit.rs  workflow_timeout.rs
crates/aion-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/aion-cli/src/: awl.rs  awl_tests.rs  check_deterministic.rs  codegen.rs  deploy.rs  generate.rs  harness.rs  input.rs  inspect.rs  main.rs  one_motion.rs  output.rs  package.rs  payload.rs  render.rs  server.rs  worker.rs  worker_shell.rs
crates/aion-cli/tests/: authoring_quality_e2e.rs  awl_emit_beam.rs  codegen_command.rs  deploy_commands.rs  dev_hot_reload_e2e.rs  error_rendering.rs  generate_e2e.rs  generate_types_first_e2e.rs  lsub5b_osproc_failover_e2e.rs  lsub5b_osproc_kill9_failover_e2e.rs  new_agent_e2e.rs  new_hello_world_e2e.rs  new_scaffold_build.rs  one_motion_awl.rs  package_command.rs  parked_timer_osproc_kill9_failover_e2e.rs  server_command.rs  stacked_dev_live_e2e.rs
crates/aion-client/: Cargo.toml  README.md
crates/aion-client/examples/: seven_operations.rs
crates/aion-client/src/: client.rs  error.rs  handle.rs  lib.rs  ops.rs  payload.rs  stream.rs  transport.rs
crates/aion-client/tests/: conformance.rs  error_mapping.rs
crates/aion-core/: Cargo.toml  README.md
crates/aion-core/src/: activity_event.rs  cluster_event.rs  describe.rs  error.rs  event.rs  filter.rs  generated_types.rs  ids.rs  intervention.rs  lib.rs  payload.rs  schedule.rs  search.rs  status.rs
crates/aion-darwin-acl/: Cargo.toml
crates/aion-darwin-acl/src/: identity.rs  lib.rs  native.rs
crates/aion-integration-cli/: Cargo.toml  README.md
crates/aion-integration-cli/src/: demux.rs  harness.rs  lib.rs  mock.rs  session.rs
crates/aion-integration-cli/tests/: cli_observability_e2e.rs  mock_intervention_e2e.rs
crates/aion-integration-norn/: Cargo.toml  README.md
crates/aion-integration-norn/src/: harness.rs  lib.rs  protocol.rs  session.rs  translate.rs
crates/aion-integration-norn/tests/: norn_e2e.rs
crates/aion-integrations/: Cargo.toml  README.md
crates/aion-integrations/src/: contract.rs  error.rs  lib.rs  spec.rs
crates/aion-integrations/tests/: mock_harness.rs
crates/aion-nif/: Cargo.toml  README.md
crates/aion-nif/src/: context.rs  declare.rs  descriptor.rs  error.rs  lib.rs  payload.rs  raw.rs  registry.rs  term.rs  term_collection.rs
crates/aion-nif/tests/: end_to_end.rs
crates/aion-package/: Cargo.toml  README.md
crates/aion-package/src/: beam.rs  builder.rs  error.rs  extraction.rs  hash.rs  lib.rs  manifest.rs  namespace.rs  package.rs  package_tests.rs  version.rs
crates/aion-package/tests/: builder.rs  golden_gleam_exec.rs  package.rs  package_project_hello_world.rs  project_determinism.rs  roundtrip.rs  rust_worker_build.rs  schema_equivalence.rs
crates/aion-proto/: Cargo.toml  README.md  build.rs
crates/aion-proto-generated/: Cargo.toml  build.rs
crates/aion-proto-generated/proto/: common.proto  events.proto  worker.proto  workflow.proto
crates/aion-proto-generated/src/: lib.rs
crates/aion-proto/proto/: common.proto  deploy.proto  events.proto  worker.proto  workflow.proto
crates/aion-proto/src/: convert.rs  deploy.rs  error.rs  events.rs  generated.rs  lib.rs  schedule.rs  worker.rs  workflow.rs
crates/aion-server/: CHANGELOG.md  Cargo.toml  README.md
crates/aion-server/dashboard-embed/: .gitignore  index.html
crates/aion-server/examples/: failover_demo.rs  lsub5_xnode_failover_demo.rs
crates/aion-server/ops-console-embed/: .gitignore  index.html
crates/aion-server/src/: activity_bounds.rs  activity_publisher.rs  activity_publisher_tests.rs  cluster.rs  cluster_publisher.rs  config.rs  error.rs  error_engine.rs  error_process_exit.rs  error_tests.rs  filesystem.rs  internal_workflow.rs  lib.rs  main.rs  run.rs  shutdown.rs  state.rs  test_support.rs
crates/aion-server/tests/: authoring_e2e.rs  authoring_out_of_box_e2e.rs  deploy_api_e2e.rs  (+29 more)
crates/aion-store/: Cargo.toml  README.md
crates/aion-store-haematite/: Cargo.toml
crates/aion-store-libsql/: Cargo.toml  README.md
crates/aion-toolchain/: Cargo.toml  README.md
crates/aion-worker/: Cargo.toml  README.md
demo/fleet-packager/: Cargo.toml
examples/general-worker/: Cargo.toml  README.md
examples/norn-fan-worker/: Cargo.toml
spike/greet-worker/: Cargo.toml
spike/liminal-fan-worker/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+5309 files in other folders)
