[workspace]
resolver = "2"
members = [
    "crates/aion-core",
    "crates/aion-store",
    "crates/aion-store-libsql",
    "crates/aion-store-haematite",
    "crates/aion-package",
    "crates/aion-toolchain",
    "crates/aion",
    "crates/aion-nif",
    "crates/aion-proto",
    "crates/aion-proto-generated",
    "crates/aion-server",
    "crates/aion-worker",
    "crates/aion-client",
    "crates/aion-cli",
    "benchmarks/million-processes",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/tomWhiting/aion"
authors = ["Tom Whiting <tom@ablative.com.au>"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
clap = "4"
thiserror = "2.0"
anyhow = "1.0"
uuid = "1.23"
chrono = "0.4"
async-trait = "0.1"
tokio = "1.52"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sha2 = "0.11"
toml = "1.1"
toml_edit = "0.23"
rand_chacha = "0.10.0"
rand_core = "0.10.1"
zip = "8.6"
libsql = "0.9"
tonic = "0.14"
tonic-build = "0.14"
prost = "0.14"
axum = "0.8"
tower = "0.5"
futures = "0.3"
tokio-tungstenite = "0.29.0"
dashmap = "6.2"
fs4 = "1.1"
notify = "8.2"
saffron = { version = "0.1", features = ["std"] }
hostname = "0.4"
beamr = { version = "0.10.0", features = ["json"] }
