[workspace]
resolver = "2"
members = [
    "crates/aion-awl",
    "crates/aion-awl-lsp",
    "crates/aion-awl-package",
    "crates/aion-core",
    "crates/aion-store",
    "crates/aion-store-libsql",
    "crates/aion-store-haematite",
    "crates/aion-package",
    "crates/aion-toolchain",
    "crates/aion",
    "crates/aion-nif",
    "crates/aion-proto",
    "crates/aion-proto-generated",
    "crates/aion-server",
    "crates/aion-worker",
    "crates/aion-client",
    "crates/aion-integrations",
    "crates/aion-integration-norn",
    "crates/aion-integration-cli",
    "crates/aion-cli",
    "benchmarks/million-processes",
    "xtask",
]

[workspace.package]
version = "0.9.1"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/ablative-io/aion"
authors = ["Tom Whiting <tom@ablative.com.au>"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
clap = "4"
thiserror = "2.0"
anyhow = "1.0"
uuid = "1.23"
url = "2"
chrono = "0.4"
async-trait = "0.1"
tokio = "1.52"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sha2 = "0.11"
toml = "1.1"
toml_edit = "0.23"
rand_chacha = "0.10.0"
rand_core = "0.10.1"
zip = "8.6"
libsql = "0.9"
tonic = "0.14"
tonic-build = "0.14"
prost = "0.14"
axum = "0.8"
tower = "0.5"
futures = "0.3"
tokio-tungstenite = "0.29.0"
dashmap = "6.2"
fs4 = "1.1"
notify = "8.2"
saffron = { version = "0.1", features = ["std"] }
hostname = "0.4"
# 0.15.2 routes `make_fun`/`put_map` allocation through the GC safety net and
# fixes DOWN reservation arithmetic (heap-full fix for the 2026-07-14 live AWL
# child failure); 0.14.0 added `loader/encode` (the `.beam` container writer
# behind the `encode` feature) consumed by aion-awl's BC-3 bytecode emitter.
beamr = { version = "0.15.4", features = ["json", "encode"] }
haematite = "0.5.0"
# 0.2.4 carries the park-flip (idle connections park on fd readiness — retires
# the embedded front door's per-connection busy-spin measured 2026-07-13) and
# G7's push-reply contract restoration (receive = pure wait quantum).
liminal = { package = "liminal-rs", version = "0.3.0" }
liminal-sdk = "0.3.0"
liminal-server = "0.3.0"
tempfile = "3.27.0"
tokio-stream = "0.1.18"
ts-rs = { version = "12.0.1", features = ["chrono-impl", "uuid-impl", "no-serde-warnings"] }
protoc-bin-vendored = "3.2.0"
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.7"
http = "1.4.1"
http-body-util = "0.1"
lsp-server = "0.8.0"
lsp-types = "0.97.0"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8.11.0"
prometheus = "0.14.0"
base64 = "0.22.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
cap-std = "4.0.2"
cap-fs-ext = "4.0.2"
rustix = { version = "1.1.4", features = ["fs"] }
