[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Repo automation tasks (build the dashboard bundle and embed it into aion-server)."
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
