[package]
name = "aion-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The `aion` command line: operate Aion durable workflows over gRPC and run the Aion server."
documentation = "https://docs.rs/aion-cli"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "cli", "grpc"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[[bin]]
name = "aion"
path = "src/main.rs"

[dependencies]
# The engine, for the read-only time-travel lens (aion::durability::inspect_run /
# what_if_from) the `aion inspect` surface drives. Already in the CLI's graph
# transitively via aion-server; naming it directly keeps WA-004's projection in
# the engine where the brief places it, not duplicated in the CLI.
aion = { package = "aion-rs", version = "0.9.0", path = "../aion" }
# The AWL-0 authoring surface (`aion awl check` / `aion awl fmt`): parser,
# typechecker, and canonical printer. Local-only — the printer is the
# formatter, one rendering, so `fmt` has no check mode.
aion-awl = { version = "0.9.0", path = "../aion-awl" }
aion-awl-lsp = { version = "0.9.0", path = "../aion-awl-lsp" }
aion-awl-package = { version = "0.9.0", path = "../aion-awl-package" }
aion-client = { version = "0.9.0", path = "../aion-client" }
aion-core = { version = "0.9.0", path = "../aion-core" }
# The first-party Norn adapter, composed in at the binary root behind the
# default-on `norn` feature (§3A.3). OPTIONAL and depended on ONLY here (the
# composition root), NEVER by a platform library crate — the same hygiene the
# `liminal-transport` feature applies to `liminal-sdk`. A `--no-default-features`
# build drops it entirely and the platform crates carry zero Norn code, enforced
# by the `no-norn-in-platform` gate (`cargo xtask no-norn-in-platform`).
aion-integration-norn = { version = "0.9.0", path = "../aion-integration-norn", optional = true }
# The harness-integration SDK (the trait the worker drives). Present so the
# composition root can name the neutral `AgentHarness` seam the injected
# `NornHarness` satisfies; carries no concrete adapter.
aion-integrations = { version = "0.9.0", path = "../aion-integrations", optional = true }
aion-package = { version = "0.9.0", path = "../aion-package" }
aion-server = { version = "0.9.0", path = "../aion-server" }
# The instant authoring loop (`aion dev`) reuses the toolchain's external
# `gleam build` shell-out (build_project) instead of reinventing it. The
# toolchain embeds no compiler — it only spawns the operator-named gleam
# binary — so naming it here adds no compiler to the CLI.
aion-toolchain = { version = "0.9.0", path = "../aion-toolchain" }
aion-worker = { version = "0.9.0", path = "../aion-worker" }
# Event-driven filesystem watcher for `aion dev`. No poll interval: notify
# delivers OS change events; the watch loop never spins on a timer (ADR-001).
notify = { workspace = true }
# Deploy is an operator API: its gRPC stub comes from aion-proto's generated
# module, never from aion-client (the caller SDK is contract-bound and must
# not grow operator operations).
aion-proto = { version = "0.9.0", path = "../aion-proto", features = ["generated"] }
prost = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
jsonschema = { version = "0.46.6", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml_edit = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net"] }
uuid = { workspace = true }

[dev-dependencies]
aion-store = { version = "0.9.0", path = "../aion-store" }
chrono = { workspace = true }
fs4 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["net"] }

[features]
# The ablative stack is the out-of-box default for the `aion` binary, mirroring
# aion-server: a stock `cargo build -p aion-cli` links the haematite event-store
# backend and the liminal transport, so `backend = "haematite"` is selectable
# without a special flag and the runtime default backend is haematite. The slim
# opt-out is `--no-default-features --features libsql-backend`.
default = ["haematite-backend", "liminal-transport", "norn"]
# Forwarded to the embedded server. Off by default, matching the feature set
# the standalone `aion-server` binary shipped with.
auth = ["aion-server/auth"]
# Forwarded to the embedded server: compiles the libSQL event-store backend so
# `store.backend = libsql` is selectable. The lightweight opt-out path; pair it
# with `--no-default-features` to build a slim `aion` without haematite/liminal.
libsql-backend = ["aion-server/libsql-backend"]
# Forwarded to the embedded server: compiles the haematite event-store backend
# (single-node or distributed `[store.cluster]`) and, for a distributed boot,
# the SS-5b cluster supervisor that auto-recovers a dead peer's shards. OFF by
# default so a default `aion` binary is byte-identical and never links
# aion-store-haematite/haematite. When on, `store.backend = haematite` is
# selectable at runtime.
haematite-backend = ["aion-server/haematite-backend"]
# Forwarded to the embedded server: compiles the liminal push transport so a
# deployed `aion server` can HOST the cross-node outbox worker listener
# (`outbox.transport = liminal` + `outbox.liminal_listen_address`). Remote
# `LiminalActivityWorker` clients connect IN and the server pushes fan-out
# dispatches out over those connections, recording completions through the same
# `record_fan_out_completion` seam as the gRPC path. OFF by default so a default
# `aion` binary is byte-identical and never links liminal-sdk/liminal-server;
# without it, selecting `outbox.transport = liminal` at runtime is a boot-time
# configuration error rather than a silent fall-through to gRPC.
liminal-transport = ["aion-server/liminal-transport"]
# Composes the first-party Norn adapter (`aion-integration-norn`) into the `aion`
# binary so the shipped default product drives Norn agents OUT-OF-BOX — the same
# "our complete experience is the default" thread as `haematite-backend` /
# `liminal-transport`. ON by default: a stock `cargo build -p aion-cli` links the
# Norn harness at the composition root. `--no-default-features` drops it and the
# platform LIBRARY crates build with ZERO Norn code (the §3A.4 invariant). The
# worker drives the harness through the neutral `AgentHarness` trait; this feature
# only decides which concrete adapter the binary compiles in.
norn = [
    "dep:aion-integration-norn",
    "dep:aion-integrations",
]
