[package]
name = "aion-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust caller SDK for connecting to aion-server and operating Aion workflows."
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["aion", "workflow", "sdk", "client"]
categories = ["api-bindings", "asynchronous"]

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.1.0", path = "../aion-core" }
aion-proto = { version = "0.1.0", path = "../aion-proto", features = ["generated"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tonic = { workspace = true, features = ["transport", "tls-webpki-roots"] }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
http = "1.4.1"
chrono.workspace = true
uuid.workspace = true
aion = { version = "0.1.0", path = "../aion", optional = true }
aion-store = { version = "0.1.0", path = "../aion-store" }

[features]
default = []
embedded = ["dep:aion"]
