[package]
name = "aion-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust caller SDK for connecting to aion-server and operating Aion workflows."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-client"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "sdk", "client"]
categories = ["api-bindings", "asynchronous"]

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.8.0", path = "../aion-core" }
aion-proto = { version = "0.8.0", path = "../aion-proto", features = ["generated"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.7"
tonic = { workspace = true, features = ["transport", "tls-webpki-roots"] }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
http = "1.4.1"
chrono.workspace = true
uuid.workspace = true
aion = { version = "0.8.0", path = "../aion", optional = true, package = "aion-rs" }
aion-store = { version = "0.8.0", path = "../aion-store" }

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }

[features]
default = []
embedded = ["dep:aion"]
