[package]
name = "aion-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust caller SDK for connecting to aion-server and operating Aion workflows."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-client"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "sdk", "client"]
categories = ["api-bindings", "asynchronous"]

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.9.1", path = "../aion-core" }
aion-proto = { version = "0.9.1", path = "../aion-proto", features = ["generated"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
tonic = { workspace = true, features = ["transport", "tls-webpki-roots"] }
prost = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
chrono.workspace = true
uuid.workspace = true
aion = { version = "0.9.1", path = "../aion", optional = true, package = "aion-rs" }
aion-store = { version = "0.9.1", path = "../aion-store" }

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }

[features]
# The in-process ablative engine is the out-of-box client path: a default
# `aion-client` embeds the aion-rs engine so callers run workflows in-process.
# The gRPC/tonic transport stays available (it is always compiled) but is no
# longer the sole default. A slim caller can opt out with `--no-default-features`.
default = ["embedded"]
embedded = ["dep:aion"]
