[package]
name = "aion-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pure domain model and shared vocabulary for Aion durable workflows."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-core"
readme = "README.md"
keywords = ["aion", "workflow", "durable-execution", "domain", "events"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ts-rs = { workspace = true }
