[package]
name = "aion-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Harness-integration SDK for Aion: the AgentHarness trait plus reusable building blocks for making an agent harness a first-class Aion integration."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-integrations"
readme = "README.md"
keywords = ["aion", "agent", "harness", "integration", "sdk"]
categories = ["api-bindings", "asynchronous"]

[lints]
workspace = true

[dependencies]
aion-core = { version = "0.9.0", path = "../aion-core" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
chrono = { workspace = true }
uuid = { workspace = true }
