[package]
name = "aion-nif"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aion-core = { path = "../aion-core" }
aion = { path = "../aion" }
beamr = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
