[package]
name = "aion-package"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aion-core = { path = "../aion-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
