[package]
name = "aion-package"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Archive validation, content hashing, and namespacing for Aion workflow packages."
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/aion-package"
keywords = ["aion", "workflow", "durable-execution", "package", "archive"]
categories = ["development-tools"]

[lints]
workspace = true

[features]
test-support = []

[dependencies]
aion-core = { version = "0.1.0", path = "../aion-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
