[package]
name = "aion-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aion-core = { path = "../aion-core" }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
